--- a/morea/03.strings/phw3.html
+++ b/morea/03.strings/phw3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Practice HW3 | CSCI 150 </title>
+  <title> HW | CSCI 150 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -54,7 +54,7 @@
 
 
 <div class="container">
-  <h1 id="practice-hw3-input-strings-and-using-functions">Practice HW3: Input, Strings, and Using Functions</h1>
+  <h1 id="hw-input-strings-and-using-functions">HW: Input, Strings, and Using Functions</h1>
 
 <p><span class="h4">
   <span style="padding: 2px" class="label label-success">Rx: &lt;10 min</span>
@@ -65,11 +65,7 @@
 
 <h2 id="setup">Setup</h2>
 
-<ul>
-  <li><code>mkdir phw3_uLogin</code></li>
-  <li><code>cd phw3_uLogin</code></li>
-  <li><code>touch maths.py mangle.py</code></li>
-</ul>
+<p>In the PyCharm sandbox, create two python files: <code>maths.py</code> &amp; <code>mangle.py</code>. (If you’ve forgotten how to do that, refer back to <a href="http://emhill.github.io/150/morea/01.unix/phw1.html">the previous HW</a>.)</p>
 
 <p><em>Don’t forget to add a comment at the top of each program with your name and what the program does.</em></p>
 
@@ -79,8 +75,9 @@
 
 <ol>
   <li>The floor of the number (e.g., <code>floor(3.75)</code> is 3)</li>
-  <li>The square root of the number rounded to 2 decimal places <!-- factorial --></li>
-  <li>The absolute value of the number times -1</li>
+  <li>The absolute value of the number (this should be stored as a variable called <code>absolute_value</code>)</li>
+  <li>The square root of <code>absolute_value</code> rounded to 2 decimal places <!-- factorial --></li>
+  <li><code>absolute_value</code> times -1</li>
 </ol>
 
 <h2 id="manglepy">mangle.py</h2>
@@ -90,7 +87,7 @@
 <ol>
   <li>converting the string to all upper case letters</li>
   <li>removing the second character</li>
-  <li>removing the last character</li>
+  <li>removing the second to last character</li>
 </ol>
 
 <p>For example:</p>
@@ -105,52 +102,45 @@
   <tbody>
     <tr>
       <td style="text-align: center">hellothere</td>
-      <td style="text-align: center">HLLOTHER</td>
+      <td style="text-align: center">HLLOTHEE</td>
     </tr>
     <tr>
       <td style="text-align: center">42 degrees Celsius</td>
-      <td style="text-align: center">4 DEGREES CELSIU</td>
+      <td style="text-align: center">4 DEGREES CELSIS</td>
     </tr>
   </tbody>
 </table>
 
 <h2 id="submission">Submission</h2>
 
-<p>Once you’re satisfied that your programs are working correctly, zip it for submission:</p>
+<p>Once you’re satisfied that your programs are working correctly, take a screenshot of each program open in the editor, with its output displayed in the console, and submit to google classroom. You should submit 2 screenshots.</p>
 
-<ul>
-  <li><code>cd ..</code></li>
-  <li><code>zip phw3_uLogin.zip phw3_uLogin/*</code></li>
-</ul>
+<!--## Demonstration
 
-<h2 id="demonstration">Demonstration</h2>
-
-<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
+Once you've finished doing the HW a single time, you can watch me do it:
 
 <div class="video-container">
-  <iframe src="http://www.youtube.com/embed/8uFbvxWgi9E" frameborder="0" allowfullscreen=""></iframe>
+  <iframe  src="http://www.youtube.com/embed/8uFbvxWgi9E" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
+## Standard Practice HW Caveats
 
-<p>You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.</p>
+You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.
 
-<p>While it’s an achievement to finish the HW no matter how long it takes, you
-might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
+While it's an achievement to finish the HW no matter how long it takes, you
+might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.</p>
+my solution.
 
-<p>After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:</p>
+After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:
 
-<ul>
-  <li>Delete your old project so you cannot refer to it;</li>
-  <li>Don’t look at my screencast while you HW; and</li>
-  <li>Reset your timer.</li>
-</ul>
+  * Delete your old project so you cannot refer to it;
+  * Don’t look at my screencast while you HW; and
+  * Reset your timer.
 
-<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
+Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
 </div>
 
@@ -165,7 +155,7 @@ have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-01-28 16:31:14 -0500</span></p>
+       Last update on: <span>2016-02-04 15:11:21 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
