--- a/morea/03.strings/project1.html
+++ b/morea/03.strings/project1.html
@@ -66,26 +66,34 @@
 
 <h2 id="setup">Setup</h2>
 
-<ul>
-  <li><code>mkdir project1_uLogin1_uLogin2</code></li>
-  <li><code>cd project1_uLogin1_uLogin2</code></li>
-  <li><code>touch bye.py convert.py fun.py string.py</code></li>
-</ul>
+<ol>
+  <li>In PyCharm, create a new project with the name <code>project1_uLogin</code>, where you replace “<code>uLogin</code>” with the beginning of your Drew e-mail address before the <code>@</code> symbol:
+ a. Go to <code>File &gt; New Project</code>:<br /><img src="project1/NewProject.png" width="300" />
+    <ol>
+      <li>Name the project:<br /><img src="project1/NameProject.png" width="400" /></li>
+      <li>I recommend opening the project in a new window for now:<br /><img src="project1/OpenProject.png" width="200" /></li>
+    </ol>
+  </li>
+  <li>Create 4 python files: <code>bye.py</code>, <code>convert.py</code>, <code>fun.py</code>, and <code>string.py</code>. To create a file, right-click on the project and select <code>New &gt; Python File</code>: <br /><img src="project1/NewFile.png" width="300" /></li>
+</ol>
 
-<p><strong><em>Don’t forget to add a comment at the top of each program with your &amp; your partner(s) names and what the program does.</em></strong></p>
+<!--  * `mkdir project1_uLogin1_uLogin2`
+  * `cd project1_uLogin1_uLogin2`
+  * `touch bye.py convert.py fun.py string.py`-->
+
+<p><strong><em>Don’t forget to add a comment at the top of each program with your name and what the program does.</em></strong></p>
 
 <h2 id="byepy">bye.py</h2>
 
 <ol>
-  <li>Edit the file (<code>ped bye.py</code>):
+  <li>Edit the file <code>bye.py</code>:
     <ol>
       <li>Create a variable that stores a name    </li>
       <li>Print “Goodbye, …!” and replace the ellipsis (…) with the variable that is storing your last name.</li>
       <li>Add a comment at the top of the file that explains what your program does and who the authors are.</li>
     </ol>
   </li>
-  <li>Run your python program: <code>python3 bye.py</code></li>
-  <li>Copy your python file <code>bye.py</code> to <code>byebye.py</code>.</li>
+  <li>Run your python program to make sure the output is correct</li>
 </ol>
 
 <h2 id="convertpy">convert.py</h2>
@@ -135,7 +143,7 @@
 <ol>
   <li>The ceiling of the number (e.g., <code>ceiling(3.75)</code> is 4)</li>
   <li>The number rounded to 0 decimal places</li>
-  <li>The factorial of the rounded number</li>
+  <li>The factorial of the rounded number’s absolute value</li>
 </ol>
 
 <h2 id="stringpy">string.py</h2>
@@ -183,8 +191,14 @@
 <p>Once you’re satisfied that your programs are working correctly, zip it for submission:</p>
 
 <ul>
-  <li><code>cd ..</code></li>
-  <li><code>zip project1_uLogin1_uLogin2.zip project1_uLogin1_uLogin2/*</code></li>
+  <li>Locate your project on your computer’s hard drive. PyCharm can help:<br /><img src="project1/reveal.png" width="400" /></li>
+  <li>Right-click on your project folder &amp; create a zip file
+    <ul>
+      <li><strong>on windows:</strong><br /><img src="project1/Compress.jpeg" width="300" /></li>
+      <li><strong>on mac:</strong><br /><img src="project1/Compress.png" width="300" /></li>
+    </ul>
+  </li>
+  <li>Make sure to name your zip file <code>project1_uLogin1.zip</code></li>
 </ul>
 
 <p>Upload your zip file to Google Classroom.</p>
@@ -202,7 +216,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2016-02-04 15:11:21 -0500</span></p>
+       Last update on: <span>2016-02-08 11:40:29 -0500</span></p>
     <p style="margin: 0">
       12 modules
       
